<resources>
    <string name="app_name">FA16_BSE_100_Assi_01</string>

    <string name="please_select_the_appropriate_action">Please select the appropriate action</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="save">save</string>
    <string name="search_by_email">Search by email</string>
    <string name="search">search</string>
    <string name="add_record">add record</string>
    <string name="search_record">search record</string>
</resources>